<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>emby.pinyin</groupId>
        <artifactId>emby-pinyin</artifactId>
        <version>2.2.0</version>
    </parent>

    <artifactId>emby-pinyin-application</artifactId>

    <properties>
        <hutool.version>5.8.44</hutool.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>emby.pinyin</groupId>
            <artifactId>emby-pinyin-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.biezhi</groupId>
            <artifactId>TinyPinyin</artifactId>
        </dependency>

        <!-- hutool -->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-cron</artifactId>
            <version>${hutool.version}</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-json</artifactId>
            <version>${hutool.version}</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-extra</artifactId>
            <version>${hutool.version}</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-http</artifactId>
            <version>${hutool.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>emby-pinyin</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>emby.pinyin.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>l4j</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>target/emby-pinyin.exe</outfile>
                            <jar>target/emby-pinyin.jar</jar>
                            <errTitle>Java environment is required!</errTitle>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>https://adoptium.net/zh-CN/</downloadUrl>
                            <supportUrl>https://whichjdk.com/</supportUrl>
                            <stayAlive>false</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <jre>
                                <path>%JAVA_HOME%/bin;%PATH%</path>
                                <minVersion>17</minVersion>
                                <opts>
                                    <opt>-Xms60m -Xmx512m -Xss256k</opt>
                                    <opt>--enable-native-access=ALL-UNNAMED</opt>
                                    <opt>-XX:+UseCompactObjectHeaders</opt>
                                    <opt>-XX:+IgnoreUnrecognizedVMOptions</opt>
                                    <opt>--add-opens=java.base/java.net=ALL-UNNAMED</opt>
                                    <opt>--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <copyright>Copyright (C) 2024-2025</copyright>
                                <productName>${project.artifactId}</productName>
                                <internalName>${project.artifactId}</internalName>
                                <originalFilename>emby-pinyin-launcher.exe</originalFilename>
                                <language>SIMPLIFIED_CHINESE</language>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>